# Endian_Independent_Serialization_2

./: CMakeLists.txt
cmake/: CompilerWarnings.cmake
include/dd99/eis2/: deserialize.hpp  eis2.hpp  eis2_traits.hpp  internal.hpp  serialize.hpp  trivial.hpp
include/dd99/eis2/io/: buffer.hpp  input_device.hpp  output_device.hpp
include/dd99/eis2/io/support/: input_from_iterator.hpp  output_to_container.hpp  output_to_iterator.hpp
include/dd99/eis2/support/: eis2_collection.hpp  eis2_integral.hpp  eis2_optional.hpp  eis2_trivial.hpp
tests/: CMakeLists.txt
tests/scratch/: 01.cpp
